# projs-rust-sample

./: Cargo.toml  README.md
apps/sample/: Cargo.toml
apps/sample/src/: main.rs
libs/build-utils/: Cargo.toml
libs/build-utils/src/: lib.rs
libs/msg-prost/: .gitignore  Cargo.toml  build.rs
libs/prost-exam/: Cargo.toml  build.rs
libs/prost-exam/benches/: bench.rs
libs/prost-exam/protos/: msgid.proto  sample.proto  segment.proto
libs/prost-exam/tests/: serialize.rs
libs/protobuf-codegen-exam/: Cargo.toml  build.rs
libs/protobuf-codegen-exam/protoc/: mod.rs  sample.rs  segment.rs
libs/protobuf-codegen-exam/protos/: sample.proto  segment.proto
libs/protobuf-codegen-exam/pure/: sample.rs  segment.rs
libs/protobuf-pure-exam/: Cargo.toml
libs/protobuf-pure-exam/protos/: sample.proto  segment.proto
libs/protos/: msg_id.proto  sample.proto
libs/protos/sample/: test.proto
