[package]
name = "msg-prost"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["lib"]   # The crate types to generate.
path = "src/lib.rs"    # The source file of the target.

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
prost = "0.11.6"

[build-dependencies]
build = { version = "0.1.0", path = "../build-utils" }
prost-build = "0.11.6"
